--- a/baseclone/templates/index.html
+++ b/baseclone/templates/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Basecamp</title>
     <!-- jQuery -->
     <script src="{% static "js/vendors/jquery.js" %}"></script>
     <!------- Angular ------->
@@ -11,9 +11,11 @@
     <script src="{% static "js/vendors/angular/angular-resource.js" %}"></script>
     <script src="{% static "js/vendors/angular/angular-route.js" %}"></script>
     <script src="{% static "js/vendors/angular/angular-sanitize.js" %}"></script>
+    <script src="{% static "js/vendors/angular-ui/ui-bootstrap-tpls-0.11.2.min.js" %}"></script>
 
     <!------- Bootstrap ------->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Quicksand|Josefin+Sans|Gloria+Hallelujah|Pacifico' rel='stylesheet' type='text/css'>
 
     <!-- JavaScript -->
     <script src="{% static "js/app.js" %}"></script>
@@ -42,84 +44,50 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="{% static "css/index.css" %}">
+    <link rel="shortcut icon" href="{% static 'apple-touch-icon-precomposed-0dd091d5e24cd5e3683b54ca0ffb56a0.png' %}">
 
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <nav class="navbar navbar-default" role="navigation">
-                <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                                data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#">Molly's Basecamp</a>
-                    </div>
 
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#"></a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home <span
-                                        class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <form class="navbar-form navbar-left" role="search">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search">
+<header>
+    <div class="container-fluid">
+                <nav class="navbar navbar" role="navigation">
+                    <nav data-behavior="hover_global_nav" class="has_announcements">
+                        <div class="logo">
+                            <a data-bare-workspace="true" data-hotkey="p" data-role="home"
+                               href="/#/">Baseclone</a>
+
+                            <div class="announcements_link">
+                                <a data-replace-stack="true" data-role="new_features" href="#/"> New
+                                    Stuff!</a>
                             </div>
-                            <button type="submit" class="btn btn-default">Submit</button>
-                        </form>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#">Home</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home <span
-                                        class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- /.navbar-collapse -->
-                </div>
-                <!-- /.container-fluid -->
-            </nav>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <div>
-                <div ng-app="baseclone">
-                    <div ng-view></div>
-                </div>
+                            <div class="global_links"><span class="navLinks">
+                                <a class="topnav_root" data-bare-workspace="true" data-hotkey="1" href="/#/projects/7487363">  Projects  </a>
+                                </span><span class="navLinks">
+                                <a class="topnav_calendar" data-bare-workspace="true" data-hotkey="2"
+                                   href="#/calendars/15019123">Calendar</a>
+                                </span><span class="navLinks">
+                                <a class="topnav_everything" data-bare-workspace="true" data-hotkey="3"
+                                   href="#/">  Everything  </a></span><span class="navLinks">
+                                <a class="topnav_timeline" data-bare-workspace="true" data-hotkey="4"
+                                   data-restore-position="true" href="#/">Progress</a></span>
+                            </div>
+                        </div>
+                    </nav>
+                </nav>
+            </div>
+</header>
+<div class="row">
+    <div class="col-sm-12">
+        <div>
+            <div ng-app="baseclone">
+                <div ng-view></div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-        </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
     </div>
 </div>
 </body>
