--- a/baseclone/templates/index.html
+++ b/baseclone/templates/index.html
@@ -44,7 +44,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="{% static "css/index.css" %}">
-    <link rel="shortcut icon" href="{% static 'apple-touch-icon-precomposed-0dd091d5e24cd5e3683b54ca0ffb56a0.png' %}">
+    <link rel="shortcut icon" href="https://basecamp.com/favicon.ico">
 
 </head>
 <body>
